--- a/ng-points/src/index.html
+++ b/ng-points/src/index.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
   <title>Pointsofinterest</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <app-root></app-root>
+
+  <script type="text/javascript" src="./assets/map.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlGiXVuPciR5PfsTMRARFFN6BZM-x8EOM&libraries=places&callback=initAutocomplete" async defer></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
 </html>
