--- a/ng-points/src/index.html
+++ b/ng-points/src/index.html
@@ -8,14 +8,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvdfVg0HlhsTlQuMc7TGotRClJ4Ad_ZkI&libraries=places&sensor=false&language=fr" async defer></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlGiXVuPciR5PfsTMRARFFN6BZM-x8EOM&libraries=places" async defer></script>
-
-
-
-
-
-
 </body>
 </html>
