--- a/ng-points/src/index.html
+++ b/ng-points/src/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr&key=AIzaSyBlGiXVuPciR5PfsTMRARFFN6BZM-x8EOM&libraries=places" async defer></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlGiXVuPciR5PfsTMRARFFN6BZM-x8EOM&libraries=places" async defer></script>
 
 
 
